force-app/main/default/objects/History_Tracker_Configuration__mdt/History_Tracker_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>History Tracker Configuration</description>
    <label>History Tracker Configuration</label>
    <pluralLabel>History Tracker Configurations</pluralLabel>
</CustomObject>