force-app/main/default/objects/History_Tracker_Configuration__mdt/fields/Track_Change__c.field-meta.xml
<CustomField>
    <fullName>Track_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Change</label>
    <type>Checkbox</type>
</CustomField>