force-app/main/default/objects/History_Tracker_Configuration__mdt/fields/Track_Insert__c.field-meta.xml
<CustomField>
    <fullName>Track_Insert__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Track Insert</label>
    <type>Checkbox</type>
</CustomField>