force-app/main/default/objects/History_Tracker_Configuration__mdt/fields/Track_Update__c.field-meta.xml
<CustomField>
    <fullName>Track_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Track Update</label>
    <type>Checkbox</type>
</CustomField>