force-app/main/default/objects/History_Tracker_Configuration__mdt/fields/Track_View__c.field-meta.xml
<CustomField>
    <fullName>Track_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track View</label>
    <type>Checkbox</type>
</CustomField>