force-app/main/default/objects/History_Tracker_Configuration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Track_Change__c</columns>
    <columns>Track_View__c</columns>
    <columns>Fields__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>